@@ -1,15 +1,0 @@
-.TH glxdemo 1 "2006-11-29"
-.SH NAME
-glxdemo \- a demonstration of the GLX functions
-.SH SYNOPSIS
-.B glxdemo
-.SH DESCRIPTION
-The \fIglxdemo\fP program shows how to use the GLX functions in order to
-create an OpenGL program running on top of an X server. This program is most
-useful when studied in its source code form.
-.SH AUTHOR
-glxdemo was written by Brian Paul <brian.paul@tungstengraphics.com>.
-.PP
-This manual page was written by Thierry Reding <thierry@gilfi.de>, for the
-Debian project (but may be used by others).
-
