@@ -1,29 +1,0 @@
-.TH glxgears 1 "2006-11-29"
-.SH NAME
-glxgears \- ``gears'' demo for GLX
-.SH SYNOPSIS
-.B glxgears
-.RI [ options ]
-.SH DESCRIPTION
-The \fIglxgears\fP program is a port of the ``gears'' demo to GLX. It displays
-a set of rotating gears and prints out the frame rate at regular intervals. It
-has become quite popular as basic benchmarking tool.
-.SH OPTIONS
-.TP 8
-.B \-display \fIdisplay\fP
-Specify which X display to run on.
-.TP 8
-.B \-info
-Display OpenGL renderer information.
-.TP 8
-.B \-stereo
-Use a stereo enabled GLX visual.
-.TP 8
-.B \-fullscreen
-Run in fullscreen mode.
-.SH AUTHOR
-glxgears was written by Brian Paul <brian.paul@tungstengraphics.com>.
-.PP
-This manual page was written by Thierry Reding <thierry@gilfi.de>, for the
-Debian project (but may be used by others).
-
