@@ -1,41 +1,0 @@
-.TH glxinfo 1 "2006-11-29"
-.SH NAME
-glxinfo \- show information about the GLX implementation
-.SH SYNOPSIS
-.B glxinfo
-.RI [ options ]
-.SH DESCRIPTION
-The \fIglxinfo\fP program shows information about the OpenGL and GLX
-implementations running on a given X display.
-.PP
-The information includes details about the server- and client-side GLX
-implementation, the OpenGL and GLU implementations as well as a list
-of available GLX visuals.
-.SH OPTIONS
-.TP 8
-.B \-v
-Print visuals info in verbose form.
-.TP 8
-.B \-t
-Print verbose table.
-.TP 8
-.B \-display \fIdisplay\fP
-Specify the X display to interrogate.
-.TP 8
-.B \-h
-Print usage information.
-.TP 8
-.B \-i
-Force an indirect rendering context.
-.TP 8
-.B \-b
-Find the "best" visual and print its number.
-.TP 8
-.B \-l
-Print interesting OpenGL limits.
-.SH AUTHOR
-glxinfo was written by Brian Paul <brian.paul@tungstengraphics.com>.
-.PP
-This manual page was written by Thierry Reding <thierry@gilfi.de>, for the
-Debian project (but may be used by others).
-
