@@ -1,4 +1,0 @@
-dri/usr/bin/glxdemo usr/bin
-dri/usr/bin/glxgears usr/bin
-dri/usr/bin/glxheads usr/bin
-dri/usr/bin/glxinfo usr/bin
