@@ -1,4 +1,0 @@
-debian/glxdemo.1
-debian/glxgears.1
-debian/glxheads.1
-debian/glxinfo.1
