@@ -95,7 +95,6 @@ endif
 confflags-dri = \
 	--with-driver=dri \
 	--with-dri-drivers="$(DRI_DRIVERS)" \
-	--with-demos=xdemos \
 	--with-dri-driverdir=/usr/lib/dri \
 	--with-egl-displays="$(EGL_DISPLAYS)" \
 	--enable-glx-tls \
@@ -108,7 +107,6 @@ confflags-osmesa = \
 	--disable-egl \
 	--disable-gallium \
 	--with-driver=osmesa \
-	--with-demos= \
 	$(confflags-common)
 
 confflags-osmesa-static = \
@@ -116,7 +114,6 @@ confflags-osmesa-static = \
 	--disable-gallium \
 	--with-driver=osmesa \
 	--enable-static \
-	--with-demos= \
 	$(confflags-common)
 
 confflags-osmesa16 = \
@@ -124,7 +121,6 @@ confflags-osmesa16 = \
 	--disable-gallium \
 	--with-driver=osmesa \
 	--with-osmesa-bits=16 \
-	--with-demos= \
 	$(confflags-common)
 
 confflags-osmesa16-static = \
@@ -133,7 +129,6 @@ confflags-osmesa16-static = \
 	--with-driver=osmesa \
 	--with-osmesa-bits=16 \
 	--enable-static \
-	--with-demos= \
 	$(confflags-common)
 
 confflags-osmesa32 = \
@@ -141,7 +136,6 @@ confflags-osmesa32 = \
 	--disable-gallium \
 	--with-driver=osmesa \
 	--with-osmesa-bits=32 \
-	--with-demos= \
 	$(confflags-common)
 
 confflags-osmesa32-static = \
@@ -150,7 +144,6 @@ confflags-osmesa32-static = \
 	--with-driver=osmesa \
 	--with-osmesa-bits=32 \
 	--enable-static \
-	--with-demos= \
 	$(confflags-common)
 
 confflags-swx11+glu = \
@@ -158,7 +151,6 @@ confflags-swx11+glu = \
 	--disable-gallium \
 	--with-driver=xlib \
 	--disable-gl-osmesa \
-	--with-demos= \
 	--disable-egl \
 	--disable-glut \
 	--enable-motif \
@@ -170,7 +162,6 @@ confflags-swx11+glu-static = \
 	--with-driver=xlib \
 	--disable-gl-osmesa \
 	--enable-static \
-	--with-demos= \
 	--disable-egl \
 	--disable-glut \
 	--enable-motif \
@@ -181,7 +172,6 @@ confflags-swx11+glu-i386-i686 = \
 	--disable-gallium \
 	--with-driver=xlib \
 	--disable-gl-osmesa \
-	--with-demos= \
 	--disable-glut \
 	--disable-egl \
 	--enable-motif \
